Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48267,5 +48267,50 @@
     "PPS": 1.0065701577377069,
     "VAULT_PNL_SPOT": 3460.9802899999777,
     "FUEL": 920978
+  },
+  "2025-03-17 18:10": {
+    "LTVL": 594038.376699,
+    "TVL_USD": 512477.542227,
+    "TVL_TOKEN": 512544.480536158,
+    "SHARES": 508428.675257,
+    "PPS": 1.0080951478141502,
+    "VAULT_PNL_SPOT": 3053.693681999983,
+    "FUEL": 920978
+  },
+  "2025-03-17 18:20": {
+    "LTVL": 594491.830951,
+    "TVL_USD": 511892.340481,
+    "TVL_TOKEN": 511953.75957353605,
+    "SHARES": 508428.675257,
+    "PPS": 1.006933291704592,
+    "VAULT_PNL_SPOT": 3053.693681999983,
+    "FUEL": 920978
+  },
+  "2025-03-17 18:30": {
+    "LTVL": 594736.798608,
+    "TVL_USD": 511794.841234,
+    "TVL_TOKEN": 511850.63807205623,
+    "SHARES": 508428.675257,
+    "PPS": 1.0067304677756943,
+    "VAULT_PNL_SPOT": 3053.693681999983,
+    "FUEL": 920978
+  },
+  "2025-03-17 18:41": {
+    "LTVL": 596654.522849,
+    "TVL_USD": 511622.646544,
+    "TVL_TOKEN": 511673.9725601875,
+    "SHARES": 508428.675257,
+    "PPS": 1.006382994235223,
+    "VAULT_PNL_SPOT": 2703.1225759999943,
+    "FUEL": 920978
+  },
+  "2025-03-17 18:54": {
+    "LTVL": 598057.41904,
+    "TVL_USD": 511712.167483,
+    "TVL_TOKEN": 511751.7770705453,
+    "SHARES": 508428.675257,
+    "PPS": 1.0065360235865248,
+    "VAULT_PNL_SPOT": 2703.1225759999943,
+    "FUEL": 920978
   }
 }
