Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48312,5 +48312,32 @@
     "PPS": 1.0065360235865248,
     "VAULT_PNL_SPOT": 2703.1225759999943,
     "FUEL": 920978
+  },
+  "2025-03-17 19:00": {
+    "LTVL": 597056.559762,
+    "TVL_USD": 511523.635758,
+    "TVL_TOKEN": 511569.17052986886,
+    "SHARES": 508428.675257,
+    "PPS": 1.0061768649678962,
+    "VAULT_PNL_SPOT": 2703.1225759999943,
+    "FUEL": 920978
+  },
+  "2025-03-17 19:10": {
+    "LTVL": 596795.675436,
+    "TVL_USD": 511540.268535,
+    "TVL_TOKEN": 511581.1950306024,
+    "SHARES": 508428.675257,
+    "PPS": 1.0062005152876337,
+    "VAULT_PNL_SPOT": 3114.031203999999,
+    "FUEL": 920978
+  },
+  "2025-03-17 19:20": {
+    "LTVL": 596788.118315,
+    "TVL_USD": 511217.52493200003,
+    "TVL_TOKEN": 511255.3578284793,
+    "SHARES": 508428.675257,
+    "PPS": 1.0055596442707533,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 920978
   }
 }
