Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48339,5 +48339,14 @@
     "PPS": 1.0055596442707533,
     "VAULT_PNL_SPOT": 0.0012450000000008288,
     "FUEL": 920978
+  },
+  "2025-03-17 19:30": {
+    "LTVL": 597183.527652,
+    "TVL_USD": 511395.475597,
+    "TVL_TOKEN": 511424.63191526546,
+    "SHARES": 508428.675257,
+    "PPS": 1.005892580029541,
+    "VAULT_PNL_SPOT": 3114.031203999999,
+    "FUEL": 920978
   }
 }
