Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48348,5 +48348,50 @@
     "PPS": 1.005892580029541,
     "VAULT_PNL_SPOT": 3114.031203999999,
     "FUEL": 920978
+  },
+  "2025-03-17 19:40": {
+    "LTVL": 597733.195424,
+    "TVL_USD": 511215.93507899996,
+    "TVL_TOKEN": 511253.92635826766,
+    "SHARES": 508428.675257,
+    "PPS": 1.0055568287918448,
+    "VAULT_PNL_SPOT": 2515.467547999986,
+    "FUEL": 920978
+  },
+  "2025-03-17 19:50": {
+    "LTVL": 597846.9892,
+    "TVL_USD": 512085.04816999997,
+    "TVL_TOKEN": 512126.8940585135,
+    "SHARES": 508428.675257,
+    "PPS": 1.00727382026524,
+    "VAULT_PNL_SPOT": 2515.467547999986,
+    "FUEL": 920978
+  },
+  "2025-03-17 20:00": {
+    "LTVL": 596835.112034,
+    "TVL_USD": 511518.793921,
+    "TVL_TOKEN": 511550.33099890605,
+    "SHARES": 508428.675257,
+    "PPS": 1.0061398105453594,
+    "VAULT_PNL_SPOT": 2515.467547999986,
+    "FUEL": 920978
+  },
+  "2025-03-17 20:10": {
+    "LTVL": 596099.810232,
+    "TVL_USD": 511358.724776,
+    "TVL_TOKEN": 511387.3982674209,
+    "SHARES": 508428.675257,
+    "PPS": 1.0058193472445771,
+    "VAULT_PNL_SPOT": 3322.7683279999765,
+    "FUEL": 920978
+  },
+  "2025-03-17 20:20": {
+    "LTVL": 596077.59967,
+    "TVL_USD": 511755.029027,
+    "TVL_TOKEN": 511793.413533015,
+    "SHARES": 508428.675257,
+    "PPS": 1.0066179160219753,
+    "VAULT_PNL_SPOT": 3322.7683279999765,
+    "FUEL": 920978
   }
 }
