Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48393,5 +48393,95 @@
     "PPS": 1.0066179160219753,
     "VAULT_PNL_SPOT": 3322.7683279999765,
     "FUEL": 920978
+  },
+  "2025-03-17 20:30": {
+    "LTVL": 595733.172296,
+    "TVL_USD": 511347.56708,
+    "TVL_TOKEN": 511381.40518758126,
+    "SHARES": 508428.675257,
+    "PPS": 1.005807559790149,
+    "VAULT_PNL_SPOT": 3322.7683279999765,
+    "FUEL": 920978
+  },
+  "2025-03-17 20:40": {
+    "LTVL": 595293.036753,
+    "TVL_USD": 511908.433698,
+    "TVL_TOKEN": 511942.1194894624,
+    "SHARES": 508428.675257,
+    "PPS": 1.006910397472539,
+    "VAULT_PNL_SPOT": 2340.130548999994,
+    "FUEL": 920978
+  },
+  "2025-03-17 20:50": {
+    "LTVL": 595404.925359,
+    "TVL_USD": 511721.555895,
+    "TVL_TOKEN": 511749.7123641743,
+    "SHARES": 508428.675257,
+    "PPS": 1.0065319626307379,
+    "VAULT_PNL_SPOT": 2340.130548999994,
+    "FUEL": 920978
+  },
+  "2025-03-17 21:00": {
+    "LTVL": 594127.055343,
+    "TVL_USD": 511300.33941200003,
+    "TVL_TOKEN": 511341.7427529107,
+    "SHARES": 508428.675257,
+    "PPS": 1.0057295499598604,
+    "VAULT_PNL_SPOT": 2340.130548999994,
+    "FUEL": 920978
+  },
+  "2025-03-17 21:10": {
+    "LTVL": 594283.889431,
+    "TVL_USD": 511543.260401,
+    "TVL_TOKEN": 511586.0443418883,
+    "SHARES": 508428.675257,
+    "PPS": 1.0062100531274958,
+    "VAULT_PNL_SPOT": 2523.3175219999976,
+    "FUEL": 920978
+  },
+  "2025-03-17 21:20": {
+    "LTVL": 594472.278788,
+    "TVL_USD": 511618.776312,
+    "TVL_TOKEN": 511646.51778619434,
+    "SHARES": 508428.675257,
+    "PPS": 1.0063289949717484,
+    "VAULT_PNL_SPOT": 2523.3175219999976,
+    "FUEL": 920978
+  },
+  "2025-03-17 21:30": {
+    "LTVL": 593814.718719,
+    "TVL_USD": 512013.37433200004,
+    "TVL_TOKEN": 512044.32229083934,
+    "SHARES": 508428.675257,
+    "PPS": 1.0071114144614517,
+    "VAULT_PNL_SPOT": 2523.3175219999976,
+    "FUEL": 920978
+  },
+  "2025-03-17 21:40": {
+    "LTVL": 594195.009048,
+    "TVL_USD": 511817.933158,
+    "TVL_TOKEN": 511847.7124579108,
+    "SHARES": 508428.675257,
+    "PPS": 1.0067247135484294,
+    "VAULT_PNL_SPOT": 2923.7072850000113,
+    "FUEL": 920978
+  },
+  "2025-03-17 21:50": {
+    "LTVL": 595434.985411,
+    "TVL_USD": 511731.097532,
+    "TVL_TOKEN": 511756.51647817343,
+    "SHARES": 508428.675257,
+    "PPS": 1.006545345263013,
+    "VAULT_PNL_SPOT": 2923.7072850000113,
+    "FUEL": 920978
+  },
+  "2025-03-17 22:00": {
+    "LTVL": 595445.717286,
+    "TVL_USD": 512013.264347,
+    "TVL_TOKEN": 512040.9555218746,
+    "SHARES": 508428.675257,
+    "PPS": 1.0071047925513812,
+    "VAULT_PNL_SPOT": 2923.7072850000113,
+    "FUEL": 920978
   }
 }
