Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48483,5 +48483,113 @@
     "PPS": 1.0071047925513812,
     "VAULT_PNL_SPOT": 2923.7072850000113,
     "FUEL": 920978
+  },
+  "2025-03-17 22:10": {
+    "LTVL": 595348.307335,
+    "TVL_USD": 511983.669774,
+    "TVL_TOKEN": 512007.69829528104,
+    "SHARES": 508428.675257,
+    "PPS": 1.0070393807675617,
+    "VAULT_PNL_SPOT": 3310.5282560000196,
+    "FUEL": 920978
+  },
+  "2025-03-17 22:20": {
+    "LTVL": 595236.533135,
+    "TVL_USD": 512027.96653,
+    "TVL_TOKEN": 512077.89924595546,
+    "SHARES": 508428.675257,
+    "PPS": 1.007177455101467,
+    "VAULT_PNL_SPOT": 3310.5282560000196,
+    "FUEL": 920978
+  },
+  "2025-03-17 22:30": {
+    "LTVL": 594309.880142,
+    "TVL_USD": 511384.397252,
+    "TVL_TOKEN": 511430.1702522375,
+    "SHARES": 508428.675257,
+    "PPS": 1.0059034730755898,
+    "VAULT_PNL_SPOT": 3310.5282560000196,
+    "FUEL": 920978
+  },
+  "2025-03-17 22:40": {
+    "LTVL": 595405.322657,
+    "TVL_USD": 511938.55369,
+    "TVL_TOKEN": 511978.6364974514,
+    "SHARES": 508428.675257,
+    "PPS": 1.006982220738547,
+    "VAULT_PNL_SPOT": 2722.382379000017,
+    "FUEL": 920978
+  },
+  "2025-03-17 22:50": {
+    "LTVL": 594807.774643,
+    "TVL_USD": 511920.475934,
+    "TVL_TOKEN": 511956.54839239974,
+    "SHARES": 508428.675257,
+    "PPS": 1.0069387768768479,
+    "VAULT_PNL_SPOT": 2722.382379000017,
+    "FUEL": 920978
+  },
+  "2025-03-17 23:00": {
+    "LTVL": 594956.253949,
+    "TVL_USD": 512019.944581,
+    "TVL_TOKEN": 512045.8080147628,
+    "SHARES": 508428.675257,
+    "PPS": 1.0071143366489594,
+    "VAULT_PNL_SPOT": 2722.382379000017,
+    "FUEL": 920978
+  },
+  "2025-03-17 23:10": {
+    "LTVL": 594866.963613,
+    "TVL_USD": 512012.844737,
+    "TVL_TOKEN": 512036.5059439397,
+    "SHARES": 508428.675257,
+    "PPS": 1.0070960409247491,
+    "VAULT_PNL_SPOT": 3210.2767509999685,
+    "FUEL": 920978
+  },
+  "2025-03-17 23:20": {
+    "LTVL": 593840.264576,
+    "TVL_USD": 512027.026861,
+    "TVL_TOKEN": 512047.4524338776,
+    "SHARES": 508428.675257,
+    "PPS": 1.0071175709651867,
+    "VAULT_PNL_SPOT": 3210.2767509999685,
+    "FUEL": 920978
+  },
+  "2025-03-17 23:30": {
+    "LTVL": 592649.80515,
+    "TVL_USD": 511857.962464,
+    "TVL_TOKEN": 511879.5125914801,
+    "SHARES": 508428.675257,
+    "PPS": 1.0067872594572598,
+    "VAULT_PNL_SPOT": 3210.2767509999685,
+    "FUEL": 920978
+  },
+  "2025-03-17 23:40": {
+    "LTVL": 593373.364496,
+    "TVL_USD": 511849.84976799996,
+    "TVL_TOKEN": 511880.562601756,
+    "SHARES": 508428.675257,
+    "PPS": 1.0067893246638993,
+    "VAULT_PNL_SPOT": 3238.2263529999764,
+    "FUEL": 920978
+  },
+  "2025-03-17 23:50": {
+    "LTVL": 594199.421662,
+    "TVL_USD": 512225.911811,
+    "TVL_TOKEN": 512253.3378547088,
+    "SHARES": 508428.675257,
+    "PPS": 1.0075225155146401,
+    "VAULT_PNL_SPOT": 3238.2263529999764,
+    "FUEL": 920978
+  },
+  "2025-03-18 00:00": {
+    "LTVL": 593256.394378,
+    "TVL_USD": 512370.632187,
+    "TVL_TOKEN": 512392.30638156,
+    "SHARES": 508428.675257,
+    "PPS": 1.0077958449581084,
+    "VAULT_PNL_SPOT": 3238.2263529999764,
+    "FUEL": 920978
   }
 }
