Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48591,5 +48591,14 @@
     "PPS": 1.0077958449581084,
     "VAULT_PNL_SPOT": 3238.2263529999764,
     "FUEL": 920978
+  },
+  "2025-03-18 00:10": {
+    "LTVL": 591845.956957,
+    "TVL_USD": 511481.275575,
+    "TVL_TOKEN": 511507.70006278524,
+    "SHARES": 508428.675257,
+    "PPS": 1.0060559621351586,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 920978
   }
 }
