Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48600,5 +48600,23 @@
     "PPS": 1.0060559621351586,
     "VAULT_PNL_SPOT": 0.0012450000000008288,
     "FUEL": 920978
+  },
+  "2025-03-18 00:20": {
+    "LTVL": 592436.867862,
+    "TVL_USD": 511300.446508,
+    "TVL_TOKEN": 511321.0885403444,
+    "SHARES": 508428.675257,
+    "PPS": 1.005688926341305,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 920978
+  },
+  "2025-03-18 00:31": {
+    "LTVL": 590735.946862,
+    "TVL_USD": 511794.385129,
+    "TVL_TOKEN": 511825.1048717944,
+    "SHARES": 508428.675257,
+    "PPS": 1.006680247948402,
+    "VAULT_PNL_SPOT": 3508.4856920000166,
+    "FUEL": 920978
   }
 }
