Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48618,5 +48618,41 @@
     "PPS": 1.006680247948402,
     "VAULT_PNL_SPOT": 3508.4856920000166,
     "FUEL": 920978
+  },
+  "2025-03-18 00:40": {
+    "LTVL": 590972.885476,
+    "TVL_USD": 511381.977872,
+    "TVL_TOKEN": 511406.88338722097,
+    "SHARES": 508428.675257,
+    "PPS": 1.0058576714397856,
+    "VAULT_PNL_SPOT": 2725.170054999995,
+    "FUEL": 920978
+  },
+  "2025-03-18 00:50": {
+    "LTVL": 590045.534927,
+    "TVL_USD": 511746.31030500005,
+    "TVL_TOKEN": 511775.7425279528,
+    "SHARES": 508428.675257,
+    "PPS": 1.0065831599078492,
+    "VAULT_PNL_SPOT": 2725.170054999995,
+    "FUEL": 920978
+  },
+  "2025-03-18 01:00": {
+    "LTVL": 589766.461711,
+    "TVL_USD": 511508.067015,
+    "TVL_TOKEN": 511535.44439198385,
+    "SHARES": 508428.675257,
+    "PPS": 1.0061105309086145,
+    "VAULT_PNL_SPOT": 2725.170054999995,
+    "FUEL": 920978
+  },
+  "2025-03-18 01:10": {
+    "LTVL": 588966.207759,
+    "TVL_USD": 512050.674008,
+    "TVL_TOKEN": 512088.08716364816,
+    "SHARES": 508428.675257,
+    "PPS": 1.0071974931484704,
+    "VAULT_PNL_SPOT": 2514.897788000002,
+    "FUEL": 920978
   }
 }
