--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48654,5 +48654,23 @@
     "PPS": 1.0071974931484704,
     "VAULT_PNL_SPOT": 2514.897788000002,
     "FUEL": 920978
+  },
+  "2025-03-18 01:20": {
+    "LTVL": 588231.746519,
+    "TVL_USD": 511926.608899,
+    "TVL_TOKEN": 511948.5202956686,
+    "SHARES": 508428.675257,
+    "PPS": 1.006922986861214,
+    "VAULT_PNL_SPOT": 2514.897788000002,
+    "FUEL": 920978
+  },
+  "2025-03-18 01:30": {
+    "LTVL": 588844.882286,
+    "TVL_USD": 512336.811727,
+    "TVL_TOKEN": 512365.3965924759,
+    "SHARES": 508428.675257,
+    "PPS": 1.007742917595051,
+    "VAULT_PNL_SPOT": 2514.897788000002,
+    "FUEL": 920978
   }
 }
