Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48672,5 +48672,23 @@
     "PPS": 1.007742917595051,
     "VAULT_PNL_SPOT": 2514.897788000002,
     "FUEL": 920978
+  },
+  "2025-03-18 01:40": {
+    "LTVL": 586993.726231,
+    "TVL_USD": 511840.72548200004,
+    "TVL_TOKEN": 511868.06435531727,
+    "SHARES": 508428.675257,
+    "PPS": 1.006764742560161,
+    "VAULT_PNL_SPOT": 3020.7144689999986,
+    "FUEL": 920978
+  },
+  "2025-03-18 01:50": {
+    "LTVL": 586052.751891,
+    "TVL_USD": 511994.077801,
+    "TVL_TOKEN": 512024.8044095126,
+    "SHARES": 508428.675257,
+    "PPS": 1.007073025829424,
+    "VAULT_PNL_SPOT": 3020.7144689999986,
+    "FUEL": 920978
   }
 }
