Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48690,5 +48690,14 @@
     "PPS": 1.007073025829424,
     "VAULT_PNL_SPOT": 3020.7144689999986,
     "FUEL": 920978
+  },
+  "2025-03-18 02:00": {
+    "LTVL": 586203.40967,
+    "TVL_USD": 511519.57952599996,
+    "TVL_TOKEN": 511549.8990885189,
+    "SHARES": 508428.675257,
+    "PPS": 1.0061389610449119,
+    "VAULT_PNL_SPOT": 3020.7144689999986,
+    "FUEL": 920978
   }
 }
