Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48699,5 +48699,14 @@
     "PPS": 1.0061389610449119,
     "VAULT_PNL_SPOT": 3020.7144689999986,
     "FUEL": 920978
+  },
+  "2025-03-18 02:10": {
+    "LTVL": 586298.094545,
+    "TVL_USD": 511587.207047,
+    "TVL_TOKEN": 511616.5636054197,
+    "SHARES": 508428.675257,
+    "PPS": 1.0062700797644986,
+    "VAULT_PNL_SPOT": 2294.405069999979,
+    "FUEL": 920978
   }
 }
