--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48708,5 +48708,50 @@
     "PPS": 1.0062700797644986,
     "VAULT_PNL_SPOT": 2294.405069999979,
     "FUEL": 920978
+  },
+  "2025-03-18 02:20": {
+    "LTVL": 587600.644376,
+    "TVL_USD": 511709.051579,
+    "TVL_TOKEN": 511738.1438924803,
+    "SHARES": 508428.675257,
+    "PPS": 1.0065092092490797,
+    "VAULT_PNL_SPOT": 2294.405069999979,
+    "FUEL": 920978
+  },
+  "2025-03-18 02:30": {
+    "LTVL": 587580.602752,
+    "TVL_USD": 511726.99917799997,
+    "TVL_TOKEN": 511755.58584502526,
+    "SHARES": 508428.675257,
+    "PPS": 1.0065435148525868,
+    "VAULT_PNL_SPOT": 2294.405069999979,
+    "FUEL": 920978
+  },
+  "2025-03-18 02:40": {
+    "LTVL": 586901.227773,
+    "TVL_USD": 511580.11951700004,
+    "TVL_TOKEN": 511609.0510088346,
+    "SHARES": 508428.675257,
+    "PPS": 1.0062553036573458,
+    "VAULT_PNL_SPOT": 3176.139212000009,
+    "FUEL": 920978
+  },
+  "2025-03-18 02:50": {
+    "LTVL": 587100.720823,
+    "TVL_USD": 511237.879836,
+    "TVL_TOKEN": 511272.5185491317,
+    "SHARES": 508428.675257,
+    "PPS": 1.0055933967349386,
+    "VAULT_PNL_SPOT": 3176.139212000009,
+    "FUEL": 920978
+  },
+  "2025-03-18 03:00": {
+    "LTVL": 586485.177772,
+    "TVL_USD": 511470.157931,
+    "TVL_TOKEN": 511515.60097699077,
+    "SHARES": 508428.675257,
+    "PPS": 1.0060715020025777,
+    "VAULT_PNL_SPOT": 3176.139212000009,
+    "FUEL": 920978
   }
 }
