Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48753,5 +48753,77 @@
     "PPS": 1.0060715020025777,
     "VAULT_PNL_SPOT": 3176.139212000009,
     "FUEL": 920978
+  },
+  "2025-03-18 03:10": {
+    "LTVL": 585489.109226,
+    "TVL_USD": 511588.179012,
+    "TVL_TOKEN": 511625.95747269975,
+    "SHARES": 508428.675257,
+    "PPS": 1.0062885560380392,
+    "VAULT_PNL_SPOT": 3176.139212000009,
+    "FUEL": 920978
+  },
+  "2025-03-18 03:20": {
+    "LTVL": 585100.124077,
+    "TVL_USD": 511392.433028,
+    "TVL_TOKEN": 511452.1757566501,
+    "SHARES": 508428.675257,
+    "PPS": 1.0059467544746994,
+    "VAULT_PNL_SPOT": 3176.139212000009,
+    "FUEL": 920978
+  },
+  "2025-03-18 03:30": {
+    "LTVL": 584092.200258,
+    "TVL_USD": 511549.757706,
+    "TVL_TOKEN": 511610.0151335824,
+    "SHARES": 508428.675257,
+    "PPS": 1.006257199940531,
+    "VAULT_PNL_SPOT": 3176.139212000009,
+    "FUEL": 920978
+  },
+  "2025-03-18 03:40": {
+    "LTVL": 584211.52999,
+    "TVL_USD": 511686.126595,
+    "TVL_TOKEN": 511750.5662262992,
+    "SHARES": 508428.675257,
+    "PPS": 1.0065336420445208,
+    "VAULT_PNL_SPOT": 3128.758021000016,
+    "FUEL": 920978
+  },
+  "2025-03-18 03:50": {
+    "LTVL": 584103.164121,
+    "TVL_USD": 511421.728078,
+    "TVL_TOKEN": 511482.80935509317,
+    "SHARES": 508428.675257,
+    "PPS": 1.006007005990662,
+    "VAULT_PNL_SPOT": 3128.758021000016,
+    "FUEL": 920978
+  },
+  "2025-03-18 04:00": {
+    "LTVL": 584269.285714,
+    "TVL_USD": 511829.030422,
+    "TVL_TOKEN": 511897.69125932857,
+    "SHARES": 508428.675257,
+    "PPS": 1.0068230140650014,
+    "VAULT_PNL_SPOT": 3128.758021000016,
+    "FUEL": 920978
+  },
+  "2025-03-18 04:10": {
+    "LTVL": 585505.788599,
+    "TVL_USD": 511754.94291800004,
+    "TVL_TOKEN": 511818.9254018645,
+    "SHARES": 508428.675257,
+    "PPS": 1.0066680938937025,
+    "VAULT_PNL_SPOT": 2427.5775199999916,
+    "FUEL": 920978
+  },
+  "2025-03-18 04:20": {
+    "LTVL": 585289.312684,
+    "TVL_USD": 511735.27807199996,
+    "TVL_TOKEN": 511789.66595980147,
+    "SHARES": 508428.675257,
+    "PPS": 1.0066105451292702,
+    "VAULT_PNL_SPOT": 2427.5775199999916,
+    "FUEL": 920978
   }
 }
