--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48825,5 +48825,32 @@
     "PPS": 1.0066105451292702,
     "VAULT_PNL_SPOT": 2427.5775199999916,
     "FUEL": 920978
+  },
+  "2025-03-18 04:30": {
+    "LTVL": 585489.520768,
+    "TVL_USD": 511457.915546,
+    "TVL_TOKEN": 511509.09714626044,
+    "SHARES": 508428.675257,
+    "PPS": 1.0060587099807132,
+    "VAULT_PNL_SPOT": 2427.5775199999916,
+    "FUEL": 920978
+  },
+  "2025-03-18 04:40": {
+    "LTVL": 584873.107023,
+    "TVL_USD": 511197.576811,
+    "TVL_TOKEN": 511246.2218890128,
+    "SHARES": 508428.675257,
+    "PPS": 1.005541675301041,
+    "VAULT_PNL_SPOT": 2750.812765999988,
+    "FUEL": 920978
+  },
+  "2025-03-18 04:50": {
+    "LTVL": 583943.371438,
+    "TVL_USD": 511655.442894,
+    "TVL_TOKEN": 511698.53814488254,
+    "SHARES": 508428.675257,
+    "PPS": 1.0064313109134329,
+    "VAULT_PNL_SPOT": 2750.812765999988,
+    "FUEL": 920978
   }
 }
