Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48852,5 +48852,32 @@
     "PPS": 1.0064313109134329,
     "VAULT_PNL_SPOT": 2750.812765999988,
     "FUEL": 920978
+  },
+  "2025-03-18 05:00": {
+    "LTVL": 584131.287283,
+    "TVL_USD": 511300.862737,
+    "TVL_TOKEN": 511338.92169294157,
+    "SHARES": 508428.675257,
+    "PPS": 1.0057240013743727,
+    "VAULT_PNL_SPOT": 2750.812765999988,
+    "FUEL": 920978
+  },
+  "2025-03-18 05:10": {
+    "LTVL": 584687.302913,
+    "TVL_USD": 511686.605717,
+    "TVL_TOKEN": 511725.69132530346,
+    "SHARES": 508428.675257,
+    "PPS": 1.0064847169893336,
+    "VAULT_PNL_SPOT": 2276.1119789999793,
+    "FUEL": 920978
+  },
+  "2025-03-18 05:20": {
+    "LTVL": 583700.272404,
+    "TVL_USD": 511274.69591899996,
+    "TVL_TOKEN": 511307.93604792247,
+    "SHARES": 508428.675257,
+    "PPS": 1.0056630574376377,
+    "VAULT_PNL_SPOT": 2276.1119789999793,
+    "FUEL": 926871
   }
 }
