Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48879,5 +48879,14 @@
     "PPS": 1.0056630574376377,
     "VAULT_PNL_SPOT": 2276.1119789999793,
     "FUEL": 926871
+  },
+  "2025-03-18 05:30": {
+    "LTVL": 584334.012289,
+    "TVL_USD": 511364.280375,
+    "TVL_TOKEN": 511398.3855333312,
+    "SHARES": 508428.675257,
+    "PPS": 1.0058409574850002,
+    "VAULT_PNL_SPOT": 2276.1119789999793,
+    "FUEL": 926871
   }
 }
