Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48888,5 +48888,68 @@
     "PPS": 1.0058409574850002,
     "VAULT_PNL_SPOT": 2276.1119789999793,
     "FUEL": 926871
+  },
+  "2025-03-18 05:40": {
+    "LTVL": 585162.394111,
+    "TVL_USD": 511326.07314,
+    "TVL_TOKEN": 511354.98515086045,
+    "SHARES": 508428.675257,
+    "PPS": 1.0057555956936954,
+    "VAULT_PNL_SPOT": 3067.336956999963,
+    "FUEL": 926871
+  },
+  "2025-03-18 05:50": {
+    "LTVL": 584832.076752,
+    "TVL_USD": 511736.443877,
+    "TVL_TOKEN": 511772.9691138057,
+    "SHARES": 508428.675257,
+    "PPS": 1.0065777050342708,
+    "VAULT_PNL_SPOT": 3067.336956999963,
+    "FUEL": 926871
+  },
+  "2025-03-18 06:00": {
+    "LTVL": 585380.638544,
+    "TVL_USD": 511850.710433,
+    "TVL_TOKEN": 511882.63143389625,
+    "SHARES": 508428.675257,
+    "PPS": 1.0067933937344316,
+    "VAULT_PNL_SPOT": 3067.336956999963,
+    "FUEL": 926871
+  },
+  "2025-03-18 06:10": {
+    "LTVL": 585026.431087,
+    "TVL_USD": 512018.085357,
+    "TVL_TOKEN": 512048.9772717988,
+    "SHARES": 508428.675257,
+    "PPS": 1.0071205700838348,
+    "VAULT_PNL_SPOT": 2746.094455000013,
+    "FUEL": 926871
+  },
+  "2025-03-18 06:20": {
+    "LTVL": 583622.098471,
+    "TVL_USD": 511513.870714,
+    "TVL_TOKEN": 511575.6025419588,
+    "SHARES": 508428.675257,
+    "PPS": 1.0061895157336829,
+    "VAULT_PNL_SPOT": 2746.094455000013,
+    "FUEL": 926871
+  },
+  "2025-03-18 06:30": {
+    "LTVL": 583690.014041,
+    "TVL_USD": 511571.636062,
+    "TVL_TOKEN": 511614.6065728061,
+    "SHARES": 508428.675257,
+    "PPS": 1.0062662305862187,
+    "VAULT_PNL_SPOT": 2746.094455000013,
+    "FUEL": 926871
+  },
+  "2025-03-18 06:40": {
+    "LTVL": 583865.651949,
+    "TVL_USD": 511660.21444400004,
+    "TVL_TOKEN": 511704.1340098221,
+    "SHARES": 508428.675257,
+    "PPS": 1.0064423171080317,
+    "VAULT_PNL_SPOT": 2585.476549999963,
+    "FUEL": 926871
   }
 }
