Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48951,5 +48951,14 @@
     "PPS": 1.0064423171080317,
     "VAULT_PNL_SPOT": 2585.476549999963,
     "FUEL": 926871
+  },
+  "2025-03-18 06:50": {
+    "LTVL": 583148.807571,
+    "TVL_USD": 511572.171706,
+    "TVL_TOKEN": 511616.26279552776,
+    "SHARES": 508428.675257,
+    "PPS": 1.0062694881183019,
+    "VAULT_PNL_SPOT": 2585.476549999963,
+    "FUEL": 926871
   }
 }
