Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48960,5 +48960,23 @@
     "PPS": 1.0062694881183019,
     "VAULT_PNL_SPOT": 2585.476549999963,
     "FUEL": 926871
+  },
+  "2025-03-18 07:00": {
+    "LTVL": 584025.157089,
+    "TVL_USD": 512216.537035,
+    "TVL_TOKEN": 512279.2861247574,
+    "SHARES": 508428.675257,
+    "PPS": 1.0075735517195425,
+    "VAULT_PNL_SPOT": 2585.476549999963,
+    "FUEL": 926871
+  },
+  "2025-03-18 07:10": {
+    "LTVL": 586112.865699,
+    "TVL_USD": 512187.04716899997,
+    "TVL_TOKEN": 512257.0317246742,
+    "SHARES": 508428.675257,
+    "PPS": 1.0075297807814223,
+    "VAULT_PNL_SPOT": 2750.349294000014,
+    "FUEL": 926871
   }
 }
