--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -126504,5 +126504,338 @@
     "PPS": 1.019968979058627,
     "VAULT_PNL_SPOT": 10772.169455000025,
     "FUEL": 2441439
+  },
+  "2025-05-18 20:50": {
+    "LTVL": 563863.378345,
+    "TVL_USD": 518064.487976,
+    "TVL_TOKEN": 518141.72736329807,
+    "SHARES": 508015.341353,
+    "PPS": 1.0199332287551166,
+    "VAULT_PNL_SPOT": 10772.169455000025,
+    "FUEL": 2441439
+  },
+  "2025-05-18 21:00": {
+    "LTVL": 563954.997609,
+    "TVL_USD": 518135.057237,
+    "TVL_TOKEN": 518235.99406156334,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201187875179962,
+    "VAULT_PNL_SPOT": 10772.169455000025,
+    "FUEL": 2441439
+  },
+  "2025-05-18 21:10": {
+    "LTVL": 564656.654426,
+    "TVL_USD": 517888.508835,
+    "TVL_TOKEN": 517966.25038952095,
+    "SHARES": 508015.341353,
+    "PPS": 1.0195878120727981,
+    "VAULT_PNL_SPOT": 9805.953512000036,
+    "FUEL": 2441439
+  },
+  "2025-05-18 21:20": {
+    "LTVL": 564927.042072,
+    "TVL_USD": 517728.143642,
+    "TVL_TOKEN": 517801.2830732341,
+    "SHARES": 508015.341353,
+    "PPS": 1.0192630830678677,
+    "VAULT_PNL_SPOT": 9805.953512000036,
+    "FUEL": 2441439
+  },
+  "2025-05-18 21:30": {
+    "LTVL": 565969.269119,
+    "TVL_USD": 517991.603015,
+    "TVL_TOKEN": 518050.4846330834,
+    "SHARES": 508015.341353,
+    "PPS": 1.019753622505487,
+    "VAULT_PNL_SPOT": 9805.953512000036,
+    "FUEL": 2441439
+  },
+  "2025-05-18 21:40": {
+    "LTVL": 565967.440991,
+    "TVL_USD": 517919.98679,
+    "TVL_TOKEN": 517989.9309703789,
+    "SHARES": 508015.341353,
+    "PPS": 1.0196344259817303,
+    "VAULT_PNL_SPOT": 9608.78000800003,
+    "FUEL": 2441439
+  },
+  "2025-05-18 21:50": {
+    "LTVL": 566091.764965,
+    "TVL_USD": 517812.491986,
+    "TVL_TOKEN": 517887.653021083,
+    "SHARES": 508015.341353,
+    "PPS": 1.0194330975158938,
+    "VAULT_PNL_SPOT": 9608.78000800003,
+    "FUEL": 2441439
+  },
+  "2025-05-18 22:00": {
+    "LTVL": 564846.952593,
+    "TVL_USD": 518216.55098400003,
+    "TVL_TOKEN": 518277.8891721836,
+    "SHARES": 508015.341353,
+    "PPS": 1.020201255717694,
+    "VAULT_PNL_SPOT": 9608.78000800003,
+    "FUEL": 2441439
+  },
+  "2025-05-18 22:10": {
+    "LTVL": 563626.436735,
+    "TVL_USD": 518107.933859,
+    "TVL_TOKEN": 518165.55386859016,
+    "SHARES": 508015.341353,
+    "PPS": 1.0199801299081972,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 2441439
+  },
+  "2025-05-18 22:20": {
+    "LTVL": 563127.719658,
+    "TVL_USD": 517552.773942,
+    "TVL_TOKEN": 517610.76187565294,
+    "SHARES": 508015.341353,
+    "PPS": 1.0188880526660817,
+    "VAULT_PNL_SPOT": 10272.99217099999,
+    "FUEL": 2441439
+  },
+  "2025-05-18 22:30": {
+    "LTVL": 565438.61245,
+    "TVL_USD": 517407.716127,
+    "TVL_TOKEN": 517462.17902134196,
+    "SHARES": 508015.341353,
+    "PPS": 1.0185955755650649,
+    "VAULT_PNL_SPOT": 10272.99217099999,
+    "FUEL": 2441439
+  },
+  "2025-05-18 22:40": {
+    "LTVL": 566739.488308,
+    "TVL_USD": 518033.003747,
+    "TVL_TOKEN": 518094.0093165971,
+    "SHARES": 508015.341353,
+    "PPS": 1.0198392984289697,
+    "VAULT_PNL_SPOT": 9135.629108000023,
+    "FUEL": 2441439
+  },
+  "2025-05-18 22:50": {
+    "LTVL": 567447.963041,
+    "TVL_USD": 517542.570391,
+    "TVL_TOKEN": 517602.65370704234,
+    "SHARES": 508015.341353,
+    "PPS": 1.0188720921862484,
+    "VAULT_PNL_SPOT": 9135.629108000023,
+    "FUEL": 2441439
+  },
+  "2025-05-18 23:00": {
+    "LTVL": 568764.377987,
+    "TVL_USD": 517161.214648,
+    "TVL_TOKEN": 517220.7881383778,
+    "SHARES": 508015.341353,
+    "PPS": 1.0181204110113304,
+    "VAULT_PNL_SPOT": 9135.629108000023,
+    "FUEL": 2441439
+  },
+  "2025-05-18 23:10": {
+    "LTVL": 568638.040567,
+    "TVL_USD": 517904.153101,
+    "TVL_TOKEN": 517964.82750089344,
+    "SHARES": 508015.341353,
+    "PPS": 1.019585011195518,
+    "VAULT_PNL_SPOT": 9033.052619000024,
+    "FUEL": 2441439
+  },
+  "2025-05-18 23:20": {
+    "LTVL": 568409.815063,
+    "TVL_USD": 518338.69975100004,
+    "TVL_TOKEN": 518412.64613084414,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204665173105854,
+    "VAULT_PNL_SPOT": 9033.052619000024,
+    "FUEL": 2441439
+  },
+  "2025-05-18 23:30": {
+    "LTVL": 569791.660714,
+    "TVL_USD": 517757.92913,
+    "TVL_TOKEN": 517820.54399017926,
+    "SHARES": 508015.341353,
+    "PPS": 1.019300997113719,
+    "VAULT_PNL_SPOT": 9033.052619000024,
+    "FUEL": 2441439
+  },
+  "2025-05-18 23:40": {
+    "LTVL": 570977.164164,
+    "TVL_USD": 517888.247605,
+    "TVL_TOKEN": 517938.82951109,
+    "SHARES": 508015.341353,
+    "PPS": 1.019533835595714,
+    "VAULT_PNL_SPOT": 9498.791266000015,
+    "FUEL": 2441439
+  },
+  "2025-05-18 23:50": {
+    "LTVL": 571877.40958,
+    "TVL_USD": 517692.492497,
+    "TVL_TOKEN": 517742.1077231832,
+    "SHARES": 508015.341353,
+    "PPS": 1.0191465996760605,
+    "VAULT_PNL_SPOT": 9498.791266000015,
+    "FUEL": 2441439
+  },
+  "2025-05-19 00:00": {
+    "LTVL": 574622.009466,
+    "TVL_USD": 517574.603446,
+    "TVL_TOKEN": 517615.7953109908,
+    "SHARES": 508015.341353,
+    "PPS": 1.018897960704143,
+    "VAULT_PNL_SPOT": 9498.791266000015,
+    "FUEL": 2441439
+  },
+  "2025-05-19 00:10": {
+    "LTVL": 574711.090638,
+    "TVL_USD": 517776.07309099997,
+    "TVL_TOKEN": 517817.4984908792,
+    "SHARES": 508015.341353,
+    "PPS": 1.0192950022173997,
+    "VAULT_PNL_SPOT": 9367.02964600001,
+    "FUEL": 2449786
+  },
+  "2025-05-19 00:20": {
+    "LTVL": 572162.150535,
+    "TVL_USD": 517907.407532,
+    "TVL_TOKEN": 517949.6204260647,
+    "SHARES": 508015.341353,
+    "PPS": 1.019555076912848,
+    "VAULT_PNL_SPOT": 9367.02964600001,
+    "FUEL": 2449786
+  },
+  "2025-05-19 00:30": {
+    "LTVL": 570858.976995,
+    "TVL_USD": 519105.843893,
+    "TVL_TOKEN": 519151.17098173837,
+    "SHARES": 508015.341353,
+    "PPS": 1.0219202624847514,
+    "VAULT_PNL_SPOT": 9794.51619200001,
+    "FUEL": 2449786
+  },
+  "2025-05-19 00:40": {
+    "LTVL": 568703.74805,
+    "TVL_USD": 517971.908008,
+    "TVL_TOKEN": 518016.28646326135,
+    "SHARES": 508015.341353,
+    "PPS": 1.0196863053065006,
+    "VAULT_PNL_SPOT": 9578.333392,
+    "FUEL": 2449786
+  },
+  "2025-05-19 00:50": {
+    "LTVL": 566823.189078,
+    "TVL_USD": 518152.356238,
+    "TVL_TOKEN": 518203.61693978764,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200550549510043,
+    "VAULT_PNL_SPOT": 9578.333392,
+    "FUEL": 2449786
+  },
+  "2025-05-19 01:00": {
+    "LTVL": 566977.297765,
+    "TVL_USD": 518408.037777,
+    "TVL_TOKEN": 518448.4871279657,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205370683239192,
+    "VAULT_PNL_SPOT": 9578.333392,
+    "FUEL": 2449786
+  },
+  "2025-05-19 01:10": {
+    "LTVL": 565824.780756,
+    "TVL_USD": 518588.768439,
+    "TVL_TOKEN": 518636.0213669067,
+    "SHARES": 508015.341353,
+    "PPS": 1.0209062190634255,
+    "VAULT_PNL_SPOT": 10068.380479000043,
+    "FUEL": 2449786
+  },
+  "2025-05-19 01:20": {
+    "LTVL": 564459.43083,
+    "TVL_USD": 518046.098932,
+    "TVL_TOKEN": 518096.2454675988,
+    "SHARES": 508015.341353,
+    "PPS": 1.0198437001680898,
+    "VAULT_PNL_SPOT": 10068.380479000043,
+    "FUEL": 2449786
+  },
+  "2025-05-19 01:30": {
+    "LTVL": 566015.170271,
+    "TVL_USD": 518139.285492,
+    "TVL_TOKEN": 518192.87699933926,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200339139743957,
+    "VAULT_PNL_SPOT": 10068.380479000043,
+    "FUEL": 2449786
+  },
+  "2025-05-19 01:40": {
+    "LTVL": 566405.593303,
+    "TVL_USD": 518516.600214,
+    "TVL_TOKEN": 518568.4570597059,
+    "SHARES": 508015.341353,
+    "PPS": 1.0207732224751318,
+    "VAULT_PNL_SPOT": 9716.252460999996,
+    "FUEL": 2449786
+  },
+  "2025-05-19 01:50": {
+    "LTVL": 566432.151245,
+    "TVL_USD": 517522.507883,
+    "TVL_TOKEN": 517583.6138044458,
+    "SHARES": 508015.341353,
+    "PPS": 1.0188346131948742,
+    "VAULT_PNL_SPOT": 9716.252460999996,
+    "FUEL": 2449786
+  },
+  "2025-05-19 02:00": {
+    "LTVL": 566178.03519,
+    "TVL_USD": 518411.460808,
+    "TVL_TOKEN": 518473.174669981,
+    "SHARES": 508015.341353,
+    "PPS": 1.020585664379994,
+    "VAULT_PNL_SPOT": 9716.252460999996,
+    "FUEL": 2449786
+  },
+  "2025-05-19 02:10": {
+    "LTVL": 566033.90107,
+    "TVL_USD": 518731.33189,
+    "TVL_TOKEN": 518793.7168344493,
+    "SHARES": 508015.341353,
+    "PPS": 1.0212166338377562,
+    "VAULT_PNL_SPOT": 9691.280086000043,
+    "FUEL": 2449786
+  },
+  "2025-05-19 02:20": {
+    "LTVL": 563989.128622,
+    "TVL_USD": 518160.94032399997,
+    "TVL_TOKEN": 518226.7654877522,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201006215827184,
+    "VAULT_PNL_SPOT": 9691.280086000043,
+    "FUEL": 2449786
+  },
+  "2025-05-19 02:30": {
+    "LTVL": 564853.351096,
+    "TVL_USD": 517939.178828,
+    "TVL_TOKEN": 517991.5218712851,
+    "SHARES": 508015.341353,
+    "PPS": 1.0196375575818546,
+    "VAULT_PNL_SPOT": 9691.280086000043,
+    "FUEL": 2449786
+  },
+  "2025-05-19 02:40": {
+    "LTVL": 565078.376124,
+    "TVL_USD": 518043.25511900004,
+    "TVL_TOKEN": 518107.84244263894,
+    "SHARES": 508015.341353,
+    "PPS": 1.0198665281697192,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 2449786
+  },
+  "2025-05-19 02:50": {
+    "LTVL": 564714.00642,
+    "TVL_USD": 518194.72764299996,
+    "TVL_TOKEN": 518259.4167834029,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201648938457641,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 2449786
   }
 }
