Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -126837,5 +126837,86 @@
     "PPS": 1.0201648938457641,
     "VAULT_PNL_SPOT": 0.0012450000000008288,
     "FUEL": 2449786
+  },
+  "2025-05-19 03:00": {
+    "LTVL": 564267.70659,
+    "TVL_USD": 518342.09351900005,
+    "TVL_TOKEN": 518414.6871276385,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204705348994811,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 2449786
+  },
+  "2025-05-19 03:10": {
+    "LTVL": 563625.045717,
+    "TVL_USD": 518321.61451000004,
+    "TVL_TOKEN": 518391.59737564577,
+    "SHARES": 508015.341353,
+    "PPS": 1.020425084004374,
+    "VAULT_PNL_SPOT": 10312.141712828132,
+    "FUEL": 2449786
+  },
+  "2025-05-19 03:20": {
+    "LTVL": 563123.381096,
+    "TVL_USD": 518008.154779,
+    "TVL_TOKEN": 518070.84135080344,
+    "SHARES": 508015.341353,
+    "PPS": 1.0197936935743368,
+    "VAULT_PNL_SPOT": 10312.141712828132,
+    "FUEL": 2449786
+  },
+  "2025-05-19 03:30": {
+    "LTVL": 562946.733845,
+    "TVL_USD": 518452.767906,
+    "TVL_TOKEN": 518517.73299276666,
+    "SHARES": 508015.341353,
+    "PPS": 1.020673374965007,
+    "VAULT_PNL_SPOT": 10312.141712828132,
+    "FUEL": 2449786
+  },
+  "2025-05-19 03:40": {
+    "LTVL": 562445.908159,
+    "TVL_USD": 518172.523397,
+    "TVL_TOKEN": 518236.9454316866,
+    "SHARES": 508015.341353,
+    "PPS": 1.020120660237274,
+    "VAULT_PNL_SPOT": 9705.735929930815,
+    "FUEL": 2449786
+  },
+  "2025-05-19 03:50": {
+    "LTVL": 561431.895637,
+    "TVL_USD": 517945.320446,
+    "TVL_TOKEN": 518010.1960429525,
+    "SHARES": 508015.341353,
+    "PPS": 1.0196743166521962,
+    "VAULT_PNL_SPOT": 9705.735929930815,
+    "FUEL": 2449786
+  },
+  "2025-05-19 04:00": {
+    "LTVL": 561448.690624,
+    "TVL_USD": 518385.13016099995,
+    "TVL_TOKEN": 518448.17345889256,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205364508837602,
+    "VAULT_PNL_SPOT": 9705.735929930815,
+    "FUEL": 2449786
+  },
+  "2025-05-19 04:10": {
+    "LTVL": 561516.576781,
+    "TVL_USD": 517644.960844,
+    "TVL_TOKEN": 517715.40637934604,
+    "SHARES": 508015.341353,
+    "PPS": 1.0190940395628836,
+    "VAULT_PNL_SPOT": 10342.787443360954,
+    "FUEL": 2449786
+  },
+  "2025-05-19 04:20": {
+    "LTVL": 562200.466948,
+    "TVL_USD": 518533.673768,
+    "TVL_TOKEN": 518584.03864983364,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208038939703787,
+    "VAULT_PNL_SPOT": 10342.787443360954,
+    "FUEL": 2449786
   }
 }
