Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -126918,5 +126918,221 @@
     "PPS": 1.0208038939703787,
     "VAULT_PNL_SPOT": 10342.787443360954,
     "FUEL": 2449786
+  },
+  "2025-05-19 04:30": {
+    "LTVL": 561611.829763,
+    "TVL_USD": 518441.930643,
+    "TVL_TOKEN": 518499.79522014654,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206380654553133,
+    "VAULT_PNL_SPOT": 10342.787443360954,
+    "FUEL": 2449786
+  },
+  "2025-05-19 04:40": {
+    "LTVL": 561615.581182,
+    "TVL_USD": 518576.03680400003,
+    "TVL_TOKEN": 518641.45823754213,
+    "SHARES": 508015.341353,
+    "PPS": 1.0209169212414757,
+    "VAULT_PNL_SPOT": 10075.318825059803,
+    "FUEL": 2449786
+  },
+  "2025-05-19 04:50": {
+    "LTVL": 558811.184034,
+    "TVL_USD": 518627.368511,
+    "TVL_TOKEN": 518692.1427857911,
+    "SHARES": 508015.341353,
+    "PPS": 1.0210166909612521,
+    "VAULT_PNL_SPOT": 10075.318825059803,
+    "FUEL": 2449786
+  },
+  "2025-05-19 05:00": {
+    "LTVL": 558123.924351,
+    "TVL_USD": 518061.923039,
+    "TVL_TOKEN": 518107.5320450459,
+    "SHARES": 508015.341353,
+    "PPS": 1.0198659171692872,
+    "VAULT_PNL_SPOT": 10075.318825059803,
+    "FUEL": 2449786
+  },
+  "2025-05-19 05:10": {
+    "LTVL": 557967.348943,
+    "TVL_USD": 518138.451909,
+    "TVL_TOKEN": 518196.4899158706,
+    "SHARES": 508015.341353,
+    "PPS": 1.020041025800038,
+    "VAULT_PNL_SPOT": 10125.36566178588,
+    "FUEL": 2449786
+  },
+  "2025-05-19 05:20": {
+    "LTVL": 558495.413736,
+    "TVL_USD": 517791.33892,
+    "TVL_TOKEN": 517846.25651550345,
+    "SHARES": 508015.341353,
+    "PPS": 1.0193516107925416,
+    "VAULT_PNL_SPOT": 10125.36566178588,
+    "FUEL": 2449786
+  },
+  "2025-05-19 05:30": {
+    "LTVL": 557877.202198,
+    "TVL_USD": 518210.35156599997,
+    "TVL_TOKEN": 518264.0385377521,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201739915126513,
+    "VAULT_PNL_SPOT": 10125.36566178588,
+    "FUEL": 2449786
+  },
+  "2025-05-19 05:40": {
+    "LTVL": 558456.795158,
+    "TVL_USD": 518207.735861,
+    "TVL_TOKEN": 518264.76571581943,
+    "SHARES": 508015.341353,
+    "PPS": 1.020175422922312,
+    "VAULT_PNL_SPOT": 10554.624137316656,
+    "FUEL": 2449786
+  },
+  "2025-05-19 05:50": {
+    "LTVL": 558188.715211,
+    "TVL_USD": 518120.08755999996,
+    "TVL_TOKEN": 518173.11739683436,
+    "SHARES": 508015.341353,
+    "PPS": 1.0199950182937016,
+    "VAULT_PNL_SPOT": 10554.624137316656,
+    "FUEL": 2449786
+  },
+  "2025-05-19 06:00": {
+    "LTVL": 557656.106393,
+    "TVL_USD": 518376.857215,
+    "TVL_TOKEN": 518442.2068551741,
+    "SHARES": 508015.341353,
+    "PPS": 1.020524705955541,
+    "VAULT_PNL_SPOT": 10554.624137316656,
+    "FUEL": 2449786
+  },
+  "2025-05-19 06:10": {
+    "LTVL": 557848.836162,
+    "TVL_USD": 518074.576698,
+    "TVL_TOKEN": 518135.5819814225,
+    "SHARES": 508015.341353,
+    "PPS": 1.019921131912019,
+    "VAULT_PNL_SPOT": 10140.937894299743,
+    "FUEL": 2449786
+  },
+  "2025-05-19 06:20": {
+    "LTVL": 557570.463604,
+    "TVL_USD": 518805.573145,
+    "TVL_TOKEN": 518868.3095123031,
+    "SHARES": 508015.341353,
+    "PPS": 1.021363465383542,
+    "VAULT_PNL_SPOT": 10140.937894299743,
+    "FUEL": 2451444
+  },
+  "2025-05-19 06:30": {
+    "LTVL": 556462.37887,
+    "TVL_USD": 517991.595011,
+    "TVL_TOKEN": 518056.1137194026,
+    "SHARES": 508015.341353,
+    "PPS": 1.0197647030494412,
+    "VAULT_PNL_SPOT": 10140.937894299743,
+    "FUEL": 2451444
+  },
+  "2025-05-19 06:40": {
+    "LTVL": 554773.684494,
+    "TVL_USD": 518278.596866,
+    "TVL_TOKEN": 518330.26921053755,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203043629156272,
+    "VAULT_PNL_SPOT": 10555.551460066403,
+    "FUEL": 2451444
+  },
+  "2025-05-19 06:50": {
+    "LTVL": 554715.876833,
+    "TVL_USD": 518132.087587,
+    "TVL_TOKEN": 518202.07077665837,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200520114147105,
+    "VAULT_PNL_SPOT": 10555.551460066403,
+    "FUEL": 2451444
+  },
+  "2025-05-19 07:00": {
+    "LTVL": 553336.335124,
+    "TVL_USD": 519068.52499,
+    "TVL_TOKEN": 519138.6710072265,
+    "SHARES": 508015.341353,
+    "PPS": 1.0218956569787867,
+    "VAULT_PNL_SPOT": 10555.551460066403,
+    "FUEL": 2451444
+  },
+  "2025-05-19 07:10": {
+    "LTVL": 554807.148002,
+    "TVL_USD": 517573.019831,
+    "TVL_TOKEN": 517650.55870818894,
+    "SHARES": 508015.341353,
+    "PPS": 1.018966390521844,
+    "VAULT_PNL_SPOT": 9680.820372422633,
+    "FUEL": 2451444
+  },
+  "2025-05-19 07:20": {
+    "LTVL": 555993.188622,
+    "TVL_USD": 517292.348115,
+    "TVL_TOKEN": 517369.808722762,
+    "SHARES": 508015.341353,
+    "PPS": 1.0184137497596986,
+    "VAULT_PNL_SPOT": 9680.820372422633,
+    "FUEL": 2451444
+  },
+  "2025-05-19 07:30": {
+    "LTVL": 556585.508358,
+    "TVL_USD": 518313.286936,
+    "TVL_TOKEN": 518387.63409048127,
+    "SHARES": 508015.341353,
+    "PPS": 1.020417282497526,
+    "VAULT_PNL_SPOT": 9680.820372422633,
+    "FUEL": 2451444
+  },
+  "2025-05-19 07:40": {
+    "LTVL": 556976.861732,
+    "TVL_USD": 517963.334121,
+    "TVL_TOKEN": 518041.0350958541,
+    "SHARES": 508015.341353,
+    "PPS": 1.0197350216159862,
+    "VAULT_PNL_SPOT": 9403.18466776621,
+    "FUEL": 2451444
+  },
+  "2025-05-19 07:50": {
+    "LTVL": 557216.82482,
+    "TVL_USD": 518278.576844,
+    "TVL_TOKEN": 518356.3095561811,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203556218905514,
+    "VAULT_PNL_SPOT": 9403.18466776621,
+    "FUEL": 2451444
+  },
+  "2025-05-19 08:00": {
+    "LTVL": 557255.538561,
+    "TVL_USD": 518334.574028,
+    "TVL_TOKEN": 518412.3410632829,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204659168020251,
+    "VAULT_PNL_SPOT": 9403.18466776621,
+    "FUEL": 2451444
+  },
+  "2025-05-19 08:10": {
+    "LTVL": 556146.826503,
+    "TVL_USD": 518363.96492,
+    "TVL_TOKEN": 518441.67414253723,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205236573402856,
+    "VAULT_PNL_SPOT": 10560.048614014464,
+    "FUEL": 2451444
+  },
+  "2025-05-19 08:20": {
+    "LTVL": 557254.574411,
+    "TVL_USD": 517944.955145,
+    "TVL_TOKEN": 518022.62745776103,
+    "SHARES": 508015.341353,
+    "PPS": 1.0196987872021908,
+    "VAULT_PNL_SPOT": 10560.048614014464,
+    "FUEL": 2451444
   }
 }
