Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -127134,5 +127134,23 @@
     "PPS": 1.0196987872021908,
     "VAULT_PNL_SPOT": 10560.048614014464,
     "FUEL": 2451444
+  },
+  "2025-05-19 08:30": {
+    "LTVL": 557481.028134,
+    "TVL_USD": 518668.318813,
+    "TVL_TOKEN": 518746.01659136504,
+    "SHARES": 508015.341353,
+    "PPS": 1.0211227385570403,
+    "VAULT_PNL_SPOT": 10560.048614014464,
+    "FUEL": 2451444
+  },
+  "2025-05-19 08:40": {
+    "LTVL": 557242.377291,
+    "TVL_USD": 518469.18788700004,
+    "TVL_TOKEN": 518546.892138787,
+    "SHARES": 508015.341353,
+    "PPS": 1.0207307731253514,
+    "VAULT_PNL_SPOT": 10487.9305002974,
+    "FUEL": 2451444
   }
 }
