Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -127152,5 +127152,95 @@
     "PPS": 1.0207307731253514,
     "VAULT_PNL_SPOT": 10487.9305002974,
     "FUEL": 2451444
+  },
+  "2025-05-19 08:50": {
+    "LTVL": 557044.26957,
+    "TVL_USD": 518056.12408000004,
+    "TVL_TOKEN": 518133.8234281613,
+    "SHARES": 508015.341353,
+    "PPS": 1.01991767029754,
+    "VAULT_PNL_SPOT": 10487.9305002974,
+    "FUEL": 2451444
+  },
+  "2025-05-19 09:00": {
+    "LTVL": 556491.189474,
+    "TVL_USD": 518170.229285,
+    "TVL_TOKEN": 518247.90946414956,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201422423265745,
+    "VAULT_PNL_SPOT": 10487.9305002974,
+    "FUEL": 2451444
+  },
+  "2025-05-19 09:10": {
+    "LTVL": 555716.498996,
+    "TVL_USD": 518683.317074,
+    "TVL_TOKEN": 518761.11567851837,
+    "SHARES": 508015.341353,
+    "PPS": 1.0211524602719655,
+    "VAULT_PNL_SPOT": 9952.60912409093,
+    "FUEL": 2451444
+  },
+  "2025-05-19 09:20": {
+    "LTVL": 556841.728065,
+    "TVL_USD": 518011.394473,
+    "TVL_TOKEN": 518089.0249324959,
+    "SHARES": 508015.341353,
+    "PPS": 1.0198294869455449,
+    "VAULT_PNL_SPOT": 9952.60912409093,
+    "FUEL": 2451444
+  },
+  "2025-05-19 09:30": {
+    "LTVL": 557412.737589,
+    "TVL_USD": 518071.666998,
+    "TVL_TOKEN": 518149.32721916365,
+    "SHARES": 508015.341353,
+    "PPS": 1.0199481886495272,
+    "VAULT_PNL_SPOT": 9952.60912409093,
+    "FUEL": 2451444
+  },
+  "2025-05-19 09:40": {
+    "LTVL": 557805.081407,
+    "TVL_USD": 518209.885489,
+    "TVL_TOKEN": 518287.5405111948,
+    "SHARES": 508015.341353,
+    "PPS": 1.020220253842801,
+    "VAULT_PNL_SPOT": 9598.468224956072,
+    "FUEL": 2451444
+  },
+  "2025-05-19 09:50": {
+    "LTVL": 557439.132752,
+    "TVL_USD": 518353.93862699997,
+    "TVL_TOKEN": 518431.6981974126,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205040202460631,
+    "VAULT_PNL_SPOT": 9598.468224956072,
+    "FUEL": 2451444
+  },
+  "2025-05-19 10:00": {
+    "LTVL": 557259.561748,
+    "TVL_USD": 518700.72290299996,
+    "TVL_TOKEN": 518778.00007389096,
+    "SHARES": 508015.341353,
+    "PPS": 1.0211856962670196,
+    "VAULT_PNL_SPOT": 9598.468224956072,
+    "FUEL": 2451444
+  },
+  "2025-05-19 10:10": {
+    "LTVL": 556215.191031,
+    "TVL_USD": 518883.809453,
+    "TVL_TOKEN": 518961.7471281837,
+    "SHARES": 508015.341353,
+    "PPS": 1.0215473921437688,
+    "VAULT_PNL_SPOT": 10718.044186350307,
+    "FUEL": 2451444
+  },
+  "2025-05-19 10:20": {
+    "LTVL": 556131.29999,
+    "TVL_USD": 517968.042888,
+    "TVL_TOKEN": 518063.2473709694,
+    "SHARES": 508015.341353,
+    "PPS": 1.019778745246568,
+    "VAULT_PNL_SPOT": 10718.044186350307,
+    "FUEL": 2451444
   }
 }
