Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -127242,5 +127242,86 @@
     "PPS": 1.019778745246568,
     "VAULT_PNL_SPOT": 10718.044186350307,
     "FUEL": 2451444
+  },
+  "2025-05-19 10:30": {
+    "LTVL": 556344.111621,
+    "TVL_USD": 518050.669701,
+    "TVL_TOKEN": 518128.35786697856,
+    "SHARES": 508015.341353,
+    "PPS": 1.0199069116437398,
+    "VAULT_PNL_SPOT": 10718.044186350307,
+    "FUEL": 2451444
+  },
+  "2025-05-19 10:40": {
+    "LTVL": 556211.513489,
+    "TVL_USD": 518206.980615,
+    "TVL_TOKEN": 518284.67148725595,
+    "SHARES": 508015.341353,
+    "PPS": 1.020214606328434,
+    "VAULT_PNL_SPOT": 10125.075704078015,
+    "FUEL": 2451444
+  },
+  "2025-05-19 10:50": {
+    "LTVL": 556640.641497,
+    "TVL_USD": 518338.298839,
+    "TVL_TOKEN": 518415.97828918684,
+    "SHARES": 508015.341353,
+    "PPS": 1.020473076479318,
+    "VAULT_PNL_SPOT": 10125.075704078015,
+    "FUEL": 2451444
+  },
+  "2025-05-19 11:00": {
+    "LTVL": 557029.034806,
+    "TVL_USD": 518384.430918,
+    "TVL_TOKEN": 518439.71732945606,
+    "SHARES": 508015.341353,
+    "PPS": 1.020519805462356,
+    "VAULT_PNL_SPOT": 10125.075704078015,
+    "FUEL": 2451444
+  },
+  "2025-05-19 11:10": {
+    "LTVL": 556936.084513,
+    "TVL_USD": 518889.033797,
+    "TVL_TOKEN": 518948.2094613249,
+    "SHARES": 508015.341353,
+    "PPS": 1.0215207439980205,
+    "VAULT_PNL_SPOT": 10327.228357279615,
+    "FUEL": 2451444
+  },
+  "2025-05-19 11:20": {
+    "LTVL": 557203.658653,
+    "TVL_USD": 518136.53878999996,
+    "TVL_TOKEN": 518192.2289088408,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200326382442244,
+    "VAULT_PNL_SPOT": 10327.228357279615,
+    "FUEL": 2451444
+  },
+  "2025-05-19 11:30": {
+    "LTVL": 557319.285245,
+    "TVL_USD": 518210.168976,
+    "TVL_TOKEN": 518271.95217541885,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201895690691196,
+    "VAULT_PNL_SPOT": 10327.228357279615,
+    "FUEL": 2451444
+  },
+  "2025-05-19 11:40": {
+    "LTVL": 557427.663185,
+    "TVL_USD": 518603.69610999996,
+    "TVL_TOKEN": 518668.5504255452,
+    "SHARES": 508015.341353,
+    "PPS": 1.0209702507096978,
+    "VAULT_PNL_SPOT": 10155.752434350201,
+    "FUEL": 2451444
+  },
+  "2025-05-19 11:50": {
+    "LTVL": 558258.496028,
+    "TVL_USD": 518328.44740199996,
+    "TVL_TOKEN": 518392.6295934699,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204271158678633,
+    "VAULT_PNL_SPOT": 10155.752434350201,
+    "FUEL": 2451444
   }
 }
