Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -127323,5 +127323,122 @@
     "PPS": 1.0204271158678633,
     "VAULT_PNL_SPOT": 10155.752434350201,
     "FUEL": 2451444
+  },
+  "2025-05-19 12:00": {
+    "LTVL": 557965.256782,
+    "TVL_USD": 518662.682683,
+    "TVL_TOKEN": 518724.27600353264,
+    "SHARES": 508015.341353,
+    "PPS": 1.0210799434166917,
+    "VAULT_PNL_SPOT": 10155.752434350201,
+    "FUEL": 2451444
+  },
+  "2025-05-19 12:10": {
+    "LTVL": 556432.80093,
+    "TVL_USD": 518832.483682,
+    "TVL_TOKEN": 518895.4464554729,
+    "SHARES": 508015.341353,
+    "PPS": 1.0214168829498256,
+    "VAULT_PNL_SPOT": 10160.692574202258,
+    "FUEL": 2454013
+  },
+  "2025-05-19 12:20": {
+    "LTVL": 555664.240888,
+    "TVL_USD": 518783.064096,
+    "TVL_TOKEN": 518845.33072414016,
+    "SHARES": 508015.341353,
+    "PPS": 1.0213182329145742,
+    "VAULT_PNL_SPOT": 10160.692574202258,
+    "FUEL": 2454013
+  },
+  "2025-05-19 12:30": {
+    "LTVL": 556050.510563,
+    "TVL_USD": 518423.177354,
+    "TVL_TOKEN": 518484.3481373932,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206076587303663,
+    "VAULT_PNL_SPOT": 10160.692574202258,
+    "FUEL": 2454013
+  },
+  "2025-05-19 12:40": {
+    "LTVL": 555059.036606,
+    "TVL_USD": 518801.78813,
+    "TVL_TOKEN": 518863.58478294767,
+    "SHARES": 508015.341353,
+    "PPS": 1.0213541650160711,
+    "VAULT_PNL_SPOT": 10290.738576000032,
+    "FUEL": 2454013
+  },
+  "2025-05-19 12:50": {
+    "LTVL": 555285.440243,
+    "TVL_USD": 518656.2362,
+    "TVL_TOKEN": 518724.4173374148,
+    "SHARES": 508015.341353,
+    "PPS": 1.0210802216245936,
+    "VAULT_PNL_SPOT": 10290.738576000032,
+    "FUEL": 2454013
+  },
+  "2025-05-19 13:00": {
+    "LTVL": 555209.203548,
+    "TVL_USD": 517982.098779,
+    "TVL_TOKEN": 518039.78250878234,
+    "SHARES": 508015.341353,
+    "PPS": 1.0197325559678654,
+    "VAULT_PNL_SPOT": 10290.738576000032,
+    "FUEL": 2454013
+  },
+  "2025-05-19 13:10": {
+    "LTVL": 555970.096721,
+    "TVL_USD": 518401.972659,
+    "TVL_TOKEN": 518462.19722783,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205640558944673,
+    "VAULT_PNL_SPOT": 9716.276244000008,
+    "FUEL": 2454013
+  },
+  "2025-05-19 13:20": {
+    "LTVL": 555570.85485,
+    "TVL_USD": 518098.216491,
+    "TVL_TOKEN": 518170.12814138347,
+    "SHARES": 508015.341353,
+    "PPS": 1.0199891341102774,
+    "VAULT_PNL_SPOT": 9716.276244000008,
+    "FUEL": 2454013
+  },
+  "2025-05-19 13:30": {
+    "LTVL": 556371.790341,
+    "TVL_USD": 518273.873803,
+    "TVL_TOKEN": 518350.91111541004,
+    "SHARES": 508015.341353,
+    "PPS": 1.020344995359556,
+    "VAULT_PNL_SPOT": 9716.276244000008,
+    "FUEL": 2454013
+  },
+  "2025-05-19 13:40": {
+    "LTVL": 558382.257844,
+    "TVL_USD": 517724.52433,
+    "TVL_TOKEN": 517785.60749811656,
+    "SHARES": 508015.341353,
+    "PPS": 1.0192322265683853,
+    "VAULT_PNL_SPOT": 10880.918157765409,
+    "FUEL": 2454013
+  },
+  "2025-05-19 13:50": {
+    "LTVL": 559377.468195,
+    "TVL_USD": 518884.848502,
+    "TVL_TOKEN": 518945.6948847252,
+    "SHARES": 508015.341353,
+    "PPS": 1.0215157941935658,
+    "VAULT_PNL_SPOT": 10880.918157765409,
+    "FUEL": 2454013
+  },
+  "2025-05-19 14:00": {
+    "LTVL": 559039.511185,
+    "TVL_USD": 518680.66302900005,
+    "TVL_TOKEN": 518744.6968743822,
+    "SHARES": 508015.341353,
+    "PPS": 1.021120140767416,
+    "VAULT_PNL_SPOT": 10880.918157765409,
+    "FUEL": 2454013
   }
 }
